[package]
name = "scorpion2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
mysql = "*"
device_query = "1.1.1"
rocket = "=0.5.0-rc.3"
figment = { version = "0.10", features = ["env", "toml", "json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
dirs = "3"
